# RockPaperScissors

./: CMakeLists.txt  README.md
include/: bots.h  define.h  functions.h  play.h  structs.h
results/: testresults_02Jun21_154801
sequences/: improper_test.txt  long_test.txt
src/: bots.c  display.c  play  play.c
